完善功能
